--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,6 @@
 			<version>2.2</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>javax.transaction</groupId>
 			<artifactId>jta</artifactId>
@@ -72,7 +71,7 @@
 			<version>3.5.6-Final</version>
 		</dependency>
 
-
+		<!-- DATABASES -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -83,6 +82,13 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.0.202</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
